only results are missing

--- a/output/abc-care_dataavailability.tex
+++ b/output/abc-care_dataavailability.tex
@@ -1,12 +1,14 @@
 \begin{sidewaystable}[H]
-\caption{Early Childhood Data (Part I)} \label{tab:ecvars_1}
+\small
+\caption{Early Childhood Data (Part I)}
+\label{tab:ecvars_1}
 \centering
 \begin{adjustbox}{max width=\textwidth, max height=\textheight,keepaspectratio}
 \begin{threeparttable}
 \tiny
 \begin{tabular}{L{3cm} C{3.5cm} C{4cm} C{1.5cm} C{1.5cm}  C{6cm}}
-\hline \hline
-Category	&	Sub-Category	&	Description	&	ABC Age  	&  CARE Age  & 	Measure	\\ \midrule
+\toprule
+\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age}  	&  \textbf{CARE Age}  & 	\textbf{Measure}	\\ \midrule
 Demographics	&	Gender	&	Gender of child	&	Birth, 18, 30, 42, 54	&	 Birth, 18, 30, 42, 54	&	Demographic Interview	\\
 	&	\\
 	&	Race	&	Race/Cultural identity of child	&	Birth, 18, 30, 42, 54	&	 Birth, 18, 30, 42, 54	&	 Demographic Interview\\
@@ -39,11 +41,12 @@ Non-Cognitive Assessments	&	Social Skills	&	Positive social response	&	30, 36, 4
 	&	Emotional Health	&	KRT	&	24, 36, 48, 60	&	24, 30, 36, 42, 48, 60	&	KRT	\\
 	&	\\
 	&	Self-Consciousness	&	Self-consciousness	&	30, 36, 42, 48, 54, 60, 66, 72	&	-	&	Infant Behavior Inventory$^{ABC}$	\\
-\hline \hline
+\bottomrule
 \end{tabular}
 \begin{tablenotes}
-\tiny
-\item Note: This table describes the major categories of variables that were measured for ABC and CARE subjects before age 18. This is not an exhaustive list of variables, nor does it include variables from auxiliary data.  Instruments or questionnaires available for only one of the studies are indicated with the superscript $^{ABC}$ or $^{CARE}$. ABC and CARE age are measured in months. \textbf{Abbreviations are as follows.} ITPA: Illinois Test of Psycholinguistic Ability. GPB: Gordon Psycholinguistic Battery. PLP: Preschool Language Performance. MSCD: McCarthy Scales of Children's Development. BSID: Bayley Scales of Infant Development and Infant Behavior. UOSPD: Uzgiris-Hunt Ordinal Scales of Psychological Development. RPM: Raven's Progressive Matrices. RIES: Rotter's Internality-Externality Scale. KRT: Kohn and Rosman Test Behavior Inventory.
+\scriptsize
+\item Sources: Authors' description. \\	
+\item Note: This table describes the major categories of variables that were measured for ABC and CARE subjects up to age 6. ABC and CARE ages are measured in months. This is not an exhaustive list of variables, nor does it include variables from auxiliary data. Instruments or questionnaires available for only one of the studies are indicated with the superscript $^{ABC}$ or $^{CARE}$.  \textbf{Abbreviations are as follows.} ITPA: Illinois Test of Psycholinguistic Ability. GPB: Gordon Psycholinguistic Battery. PLP: Preschool Language Performance. MSCD: McCarthy Scales of Children's Development. BSID: Bayley Scales of Infant Development and Infant Behavior. UOSPD: Uzgiris-Hunt Ordinal Scales of Psychological Development. RPM: Raven's Progressive Matrices. RIES: Rotter's Internality-Externality Scale. KRT: Kohn and Rosman Test Behavior Inventory.
 \end{tablenotes}
 \end{threeparttable}
 \end{adjustbox}
@@ -53,15 +56,16 @@ Non-Cognitive Assessments	&	Social Skills	&	Positive social response	&	30, 36, 4
 
 
 \begin{sidewaystable}[H]
-\caption{Early Childhood Data (Part I)}
+\small
+\caption{Early Childhood Data (Part II)}
 \label{tab:ecvars_2}
 \centering
 \begin{adjustbox}{max width=\textwidth, max height=\textheight,keepaspectratio}
 \begin{threeparttable}
 \tiny
 \begin{tabular}{L{3cm} C{3.5cm} C{4cm} C{1.5cm} C{1.5cm}  C{6cm}}
-\hline \hline
-Category	&	Sub-Category	&	Description	&	ABC Age 	&	CARE Age	&	Measure	\\ \midrule
+\toprule
+\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age}  	&  \textbf{CARE Age}  & 	\textbf{Measure}	\\ \midrule
 Family Environment	&	Family Members	&	Number of primary caretakers	&	Birth, 18, 30, 42, 54	&	18, 30, 42, 54, 60	&	Demographic Interview	\\
 	&		&	Relationship with family members, including father, mother, siblings, etc.	&	Birth, 18, 30, 42, 54	&	18, 30, 42, 54, 60	&	Demographic Interview	\\
 	&		&	Number of siblings	&	Birth, 18, 30, 42, 54	&	Birth, 18, 30, 42, 54, 60	&	Demographic Interview	\\
@@ -69,19 +73,19 @@ Family Environment	&	Family Members	&	Number of primary caretakers	&	Birth, 18, 
 	&		&	Marital conflicts between parents	&	6, 18	&	Birth, 6, 18, 36	&	Demographic Interview$^{CARE}$, Parental Attitudes Research Inventory	\\
 	&		& Father at home & 18, 30, 42, 54  & 18, 30, 42, 54, 60 & Demographic Interview \\
 	&	\\
-	&	Family Economic Environment	&	Parent occupations 	&	Birth, 18, 30, 42, 54	& 	Birth, 18, 30, 42, 54, 60		&	Demographic Interview	\\
+	&	Family Economic Environment	&	Parents' occupation	&	Birth, 18, 30, 42, 54	& 	Birth, 18, 30, 42, 54, 60		&	Demographic Interview	\\
 	&								& Mother works & 18, 30, 42, 54 & 18, 30, 42, 54, 60 & Demographic Interview \\
 	&		&	Source of child support	&	Birth, 18, 30, 42, 54	&	18, 30, 42, 54, 60	&	Demographic Interview	\\
 	&		&	Family income	&	Birth, 18, 30, 42, 54	&	Birth, 18, 30, 42, 54, 60	&	Demographic Interview	\\
 	&	\\
 	&	Parents and Home Environment & Parents' authority, warmth, family conflict, etc. & 6, 18, 30, 42, 54 & 6, 12, 18, 30, 42, 54 & Parent Interview \\
 	&	\\
-	&	Family Social Status	&	Parents' education backgrounds	&	Birth, 18, 30, 42, 54	&	Birth, 18, 30, 42, 54, 60		&	Demographic Interview	\\
+	&	Family Social Status	&	Parents' education background	&	Birth, 18, 30, 42, 54	&	Birth, 18, 30, 42, 54, 60		&	Demographic Interview	\\
 	&		&	Risk taking of family members	&	Birth	&	- 	&	Parent Interview$^{ABC}$	\\
 	&	\\
-	&	Physical Health of Family Members 	&	Health issues of parents	&	Birth	&	Birth	&	Parent Interview	\\
+	&	Family Members' Physical Health	&	Health issues of parents	&	Birth	&	Birth	&	Parent Interview	\\
 	&		&	Pregnancy history	&	Birth	&	Birth	&	Parent Interview	\\ \midrule
-Childcare	&	Day-care Experience	&	Time and location of day-care, age when enrolled	&	Birth, 18, 30, 42, 54	&	18, 30, 42, 54	&	Demographic Interview	\\
+Childcare	&	Day-care Experience	&	Time and location of day-care, Age when begin	&	Birth, 18, 30, 42, 54	&	18, 30, 42, 54	&	Demographic Interview	\\
 			&						& 	Home visits &	-	&	6, 18, 30, 42, 54, 60	& Home Visit Data$^{CARE}$ \\
 	&	\\
 	&	Parental Care	&	Maternal warmth, Maternal involvement with child	&	6, 18, 30, 42, 54	&	6, 12, 18, 30, 42, 54	&	Home Stimulation	\\
@@ -91,12 +95,13 @@ Childcare	&	Day-care Experience	&	Time and location of day-care, age when enroll
 	&		&	Democratic attitudes	&	6, 18	&	6, 18, 36	&	Parental Attitudes Research Inventory	\\
 	&		&	Hostility and rejection	&	6, 18	&	6, 18, 36	&	Parental Attitudes Research Inventory	\\
 	&		&	Parents' knowledge of childcare	&	Birth	&	-	&	Parent Interview$^{ABC}$	\\ \midrule
-Physical Health	&	Growth Data	&	Height, weight, head circumference, etc.	&	3, 6, 9, 12, 18, 24, 36, 48, 60	&	Birth, 6, 12, 18, 24, 36, 48, 60	&	Growth Measures	\\
-\hline \hline
+Physical Health	&	Growth Data	&	Height, Weight, Head circumference, etc.	&	3, 6, 9, 12, 18, 24, 36, 48, 60	&	Birth, 6, 12, 18, 24, 36, 48, 60	&	Growth Measures	\\
+\bottomrule
 \end{tabular}
 \begin{tablenotes}
-\tiny
-\item Note: This table describes the major categories of variables that were measured for ABC and CARE subjects before age 18. ABC and CARE age are measured in months. This is not an exhaustive list of variables, nor does it include variables from auxiliary data.  Instruments or questionnaires available for only one of the studies are indicated with the superscript $^{ABC}$ or $^{CARE}$.
+\scriptsize
+\item Sources: Authors' description. \\	
+\item Note: This table describes the major categories of variables that were measured for ABC and CARE subjects up to age 6. ABC and CARE ages are measured in months. This is not an exhaustive list of variables, nor does it include variables from auxiliary data.  Instruments or questionnaires available for only one of the studies are indicated with the superscript $^{ABC}$ or $^{CARE}$.
 \end{tablenotes}
 \end{threeparttable}
 \end{adjustbox}
@@ -107,24 +112,25 @@ Physical Health	&	Growth Data	&	Height, weight, head circumference, etc.	&	3, 6,
 \begin{sidewaystable}[H]
 \begin{threeparttable}
 \small
-\caption{Childhood and Teen-age Data (Part I)} \label{tab:youthvars_1}
+\caption{Childhood and Adolescence Data (Part I)} \label{tab:youthvars_1}
 \centering
-\tiny
+\tiny	
 \begin{tabular}{L{3.5cm} C{3.5cm} C{5cm} C{1.5cm} C{1.5cm} C{6cm}}
-\hline \hline
-Category	&	Sub-Category	&	Description	&	ABC Age &	CARE Age 	&	Measure	\\ \midrule
+\toprule
+\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age}  	&  \textbf{CARE Age}  & 	\textbf{Measure}	\\ \midrule
 Cognitive Assessment	&	Language Ability	&	Adaptive Language Inventory	&	6, 7, 8	&	6, 7, 8	&	Adaptive Language Inventory	\\
 	&		&	Language Questionnaire	&	12	&	- 	&	Language Questionnaire$^{ABC}$	\\
 	&		&	MSCD 	&	7	&	- 	&	MSCD$^{ABC}$	\\
 	&	\\
 	&	Intelligence Tests	&	SBIS	 &	6	&	7	&	SBIS	\\
-	&		&	 WIS	&	6, 7, 8, 12, 15	&	6, 7, 8, 12, 15	&	WIS	\\
+	&		&	 WIS	&	6, 7, 8, 12, 15	&	6, 8	&	WIS	\\
+	&		& Kaufman$^{CARE}$ & 	-	& 6 & Kaufman$^{CARE}$ \\
 	&	\\
-	&	Quantitative Skills	&	MSCD$^{ABC}$, Kaufman$^{CARE}$ 	&	7	&	6	&	MSCD$^{ABC}$ , Kaufman$^{CARE}$	\\
+	&	Quantitative Skills	&	MSCD$^{ABC}$ 	&	7	&	-	&	MSCD$^{ABC}$ 	\\
 	&	\\
-	&	Memory	&	MSCD$^{ABC}$, Kaufman$^{CARE}$ 	&	7	&	6	&	MSCD$^{ABC}$, Kaufman$^{CARE}$	\\
+	&	Memory	&	MSCD$^{ABC}$ 	&	7	&	-	&	MSCD$^{ABC}$	\\
 	&	\\
-	&	Motor Skills	&	MSCD$^{ABC}$, Kaufman$^{CARE}$ 	&	7	&	6	&	MSCD$^{ABC}$, Kaufman$^{CARE}$	\\ \midrule
+	&	Motor Skills	&	MSCD$^{ABC}$ 	&	7	&	-	&	MSCD$^{ABC}$	\\ \midrule
 Non-Cognitive Assessment	&	Interpersonal Skills	&	Gets along with people	&	6, 8, 12, 15	& 	8, 12	&	PEI, CAS, PMI$^{ABC}$, SAI$^{ABC}$, Subject Interview$^{ABC}$, Quality Rank$^{CARE}$	\\
 	&		&	Relationship with the other sex	&	15	&	- 	&	 SAI$^{ABC}$, Subject What I Am Like (Harter)$^{ABC}$	\\
 	&	\\
@@ -134,22 +140,22 @@ Non-Cognitive Assessment	&	Interpersonal Skills	&	Gets along with people	&	6, 8,
 	&	Self-Control	&	Distracted in class	&	6, 7, 8, 12, 15	&	12	&	SCAN$^{ABC}$, CBI, WPB$^{ABC}$, PMI$^{ABC}$, SAI$^{ABC}$, Self-Evaluation Inventory$^{ABC}$	\\
 	&		&	Locus of control	&	15	&	- 	&	Nowicki-Strickland Data, Pearlin Mastery Scale$^{ABC}$	\\
 	&	\\
-	&	Work Ethic	&	Task orientation	&	6, 7, 8, 12, 15	&	6, 7, 8, 9, 12 	&	SCAN$^{ABC}$, CBI, PMI$^{ABC}$		\\
+	&	Work Ethic	&	Task Orientation	&	6, 7, 8, 12, 15	&	6, 7, 8, 9, 12 	&	SCAN$^{ABC}$, CBI, PMI$^{ABC}$		\\
 	&	\\
 	&	Emotional Health	&	Harms self, suicidal thoughts	&	8, 12, 15	&	8, 12	 	&	Achenbach Parent,  Subject Risk Taking Survey$^{ABC}$		\\
 	&		&	Depression, anxiety, fear, etc.	&	6, 7, 8, 12, 15	&	7, 8, 9, 12	&	KRT, CAS, ETS,  Achenbach Parent	\\
 	&	\\
 	&	Social Activities	&	Athletic activities	&	8, 12, 15	&	8, 12		&	Achenbach Parent, SAI$^{ABC}$, Subject What I Am Like (Harter)$^{ABC}$, PEI$^{CARE}$	\\
-	&		&	Participant of organizations, e.g. religious	&	8, 12, 15	&	8, 12	&	Achenbach Parent, SAI$^{ABC}$, Subject Interview$^{ABC}$	\\
+	&		&	Participant of organizations, e.g. religions	&	8, 12, 15	&	8, 12	&	Achenbach Parent, SAI$^{ABC}$, Subject Interview$^{ABC}$	\\
 	&		&	Reading list	&	12, 15	&	12	&	CAS, SAI$^{ABC}$	 \\
 	&		&	TV/music	&	12, 15	&	12	&	CAS, SAI$^{ABC}$	, Television Checklist$^{ABC}$		\\
 	&	\\
-	&	Self-Consciousness	&	Self-conscious emotions	&	8, 12, 15	&	8, 12	&	Achenbach Parent, Subject What I Am Like (Harter)	\\ \midrule
+	&	Self-Consciousness	&	Self-conscious emotions	&	8, 12, 15	&	8, 12	&	Achenbach Parent, Subject What I Am Like (Harter)	\\ \bottomrule
 	\end{tabular}
 \begin{tablenotes}
 \scriptsize
 \item Sources: Authors' descriptions. \\
-\item Note: This table describes the major categories of variables that were measured for ABC and CARE subjects before age 18. This is not an exhaustive list of variables, nor does it include variables from auxiliary data.  Instruments or questionnaires available for only one of the studies are indicated with the superscript $^{ABC}$ or $^{CARE}$. ABC and CARE age are measured in years. \textbf{Abbreviations are as follows.}  MSCD: McCarthy Scales of Children's Development. SBIS: Stanford-Binet Intelligence Scale. WIS: Wechsler Intelligence Scale for Children. KRT: Kohn and Rosman Test Behavior Inventory. WJCA: Woodcock-Johnson Test of Cognitive Abilities. PEI: Parents as Educator Interview. CAS: Child Assessment Schedule. PMI: Psychosocial Maturity Inventory. SAI: Social Adjustment Inventory for Children and Adolescents. SCAN: Schedule of Classroom Activity Norms. CBI: Classroom Behavior Inventory. WPB: Walker Problem Behavior Checklist. ETS: Emotional/Activity/Sociability/Impulsivity Temperament Survey. FES: Family Environment Scale. PIAT: Peabody Individual Achievement Test. CAT: California Achievement Test. MARS: Mid-Adolescence Rating Scale Data.
+\item Note: This table describes the major categories of variables that were measured for ABC and CARE subjects at ages 6 to 18. ABC and CARE age are measured in years. This is not an exhaustive list of variables, nor does it include variables from auxiliary data.  Instruments or questionnaires available for only one of the studies are indicated with the superscript $^{ABC}$ or $^{CARE}$. \textbf{Abbreviations are as follows.}  MSCD: McCarthy Scales of Children's Development. SBIS: Stanford-Binet Intelligence Scale. WIS: Wechsler Intelligence Scale for Children. KRT: Kohn and Rosman Test Behavior Inventory. WJCA: Woodcock-Johnson Test of Cognitive Abilities. PEI: Parents as Educator Interview. CAS: Child Assessment Schedule. PMI: Psychosocial Maturity Inventory. SAI: Social Adjustment Inventory for Children and Adolescents. SCAN: Schedule of Classroom Activity Norms. CBI: Classroom Behavior Inventory. WPB: Walker Problem Behavior Checklist. ETS: Emotional/Activity/Sociability/Impulsivity Temperament Survey. FES: Family Environment Scale. PIAT: Peabody Individual Achievement Test. CAT: California Achievement Test. MARS: Mid-Adolescence Rating Scale Data.
 \end{tablenotes}
 \end{threeparttable}
 \end{sidewaystable}
@@ -159,14 +165,14 @@ Non-Cognitive Assessment	&	Interpersonal Skills	&	Gets along with people	&	6, 8,
 \begin{sidewaystable}[H]
 \begin{threeparttable}
 \small
-\caption{Childhood and Teen-age Data (Part II)} \label{tab:youthvars_2}
+\caption{Childhood and Adolescence Data (Part II)} \label{tab:youthvars_2}
 \centering
 \tiny
 \begin{tabular}{L{3.5cm} C{3.5cm} C{5cm} C{1.5cm} C{1.5cm} C{6cm}}
-\hline \hline
-Category	&	Sub-Category	&	Description	&	ABC Age &	CARE Age 	&	Measure	\\ \midrule
+\toprule
+\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age}  	&  \textbf{CARE Age}  & 	\textbf{Measure}	\\ \midrule
 Family Environment	&	Family Members	&	Number of adults in house	&	6, 8, 12, 15	&	8, 12	&	PEI, Parent Interview, Subject Person In Household$^{ABC}$		\\
-	&		&	Relationship with family members	&	6, 8, 12, 15	&	8, 12	&	PEI, FES, SAI, Subject Interview$^{ABC}$, Adult Self Report$^{ABC}$, Parent Interview, Achenbach Parent	\\
+	&		&	Relationship with family members, including father, mother, siblings, etc.	&	6, 8, 12, 15	&	8, 12	&	PEI, FES, SAI, Subject Interview$^{ABC}$, Adult Self Report$^{ABC}$, Parent Interview, Achenbach Parent	\\
 	&		&	Number of siblings	&	6, 8, 12, 15	&	7, 8, 12	&	PEI$^{ABC}$, Parent Interview	\\
 	&		&	Marital status of parents	&	6, 8, 12, 15	&	7, 8, 12	&	PEI$^{ABC}$	, Parent Interview	\\
 		&		& Father at home & 18, 30, 42, 54  & 18, 30, 42, 54, 60 & Demographic Interview \\
@@ -196,13 +202,13 @@ Physical Health	&	Health Issues	&	Health issues of subject	&	8, 12, 15	&	8, 12	&
 	&	\\
 	&	Growth	&	Vision, weight, height	&	8	&	8	&	Growth Data	\\
 	&	\\
-	&	Teenage Pregnancy	&	Teenage pregnancy	&	15	&	- 	& Subject Interview$^{ABC}$		\\ \midrule
-Social Conduct	&	Law Breaking	&	Felony, time spent incarcerated	&	15	&	- 	&	MARS$^{ABC}$, Subject Interview$^{ABC}$	\\ \hline \hline
+	&	Teenage Pregnancy	&	Teenage Pregnancy	&	15	&	- 	& Subject Interview$^{ABC}$		\\ \midrule
+Social Conduct	&	Law Breaking	&	Felony, Time spent incarcerated	&	15	&	- 	&	MARS$^{ABC}$, Subject Interview$^{ABC}$	\\ \bottomrule
 \end{tabular}
 \begin{tablenotes}
 \scriptsize
 \item Sources: Authors' descriptions. \\
-\item Note: This table describes the major categories of variables that were measured for ABC and CARE subjects before age 18. This is not an exhaustive list of variables, nor does it include variables from auxiliary data.  Instruments or questionnaires available for only one of the studies are indicated with the superscript $^{ABC}$ or $^{CARE}$.  ABC and CARE age are measured in months. \textbf{Abbreviations are as follows.}  MSCD: McCarthy Scales of Children's Development. SBIS: Stanford-Binet Intelligence Scale. WIS: Wechsler Intelligence Scale for Children. KRT: Kohn and Rosman Test Behavior Inventory. WJCA: Woodcock-Johnson Test of Cognitive Abilities. PEI: Parents as Educator Interview. CAS: Child Assessment Schedule. PMI: Psychosocial Maturity Inventory. SAI: Social Adjustment Inventory for Children and Adolescents. SCAN: Schedule of Classroom Activity Norms. CBI: Classroom Behavior Inventory. WPB: Walker Problem Behavior Checklist. ETS: Emotional/Activity/Sociability/Impulsivity Temperament Survey. FES: Family Environment Scale. PIAT: Peabody Individual Achievement Test. CAT: California Achievement Test. MARS: Mid-Adolescence Rating Scale Data.
+\item Note: This table describes the major categories of variables that were measured for ABC and CARE subjects at ages 6 to 18. ABC and CARE age are measured in years. This is not an exhaustive list of variables, nor does it include variables from auxiliary data.  Instruments or questionnaires available for only one of the studies are indicated with the superscript $^{ABC}$ or $^{CARE}$. \textbf{Abbreviations are as follows.}  MSCD: McCarthy Scales of Children's Development. SBIS: Stanford-Binet Intelligence Scale. WIS: Wechsler Intelligence Scale for Children. KRT: Kohn and Rosman Test Behavior Inventory. WJCA: Woodcock-Johnson Test of Cognitive Abilities. PEI: Parents as Educator Interview. CAS: Child Assessment Schedule. PMI: Psychosocial Maturity Inventory. SAI: Social Adjustment Inventory for Children and Adolescents. SCAN: Schedule of Classroom Activity Norms. CBI: Classroom Behavior Inventory. WPB: Walker Problem Behavior Checklist. ETS: Emotional/Activity/Sociability/Impulsivity Temperament Survey. FES: Family Environment Scale. PIAT: Peabody Individual Achievement Test. CAT: California Achievement Test. MARS: Mid-Adolescence Rating Scale Data.
 \end{tablenotes}
 \end{threeparttable}
 \end{sidewaystable}
@@ -212,9 +218,9 @@ Social Conduct	&	Law Breaking	&	Felony, time spent incarcerated	&	15	&	- 	&	MARS
 \small										
 \caption{Adulthood Data (Part I)} \label{tab:adultvars_1}						\centering										
 \scriptsize										
-\begin{tabular}{L{3.5cm} C{3.5cm} C{5cm} C{1.5cm} C{1.5cm} C{6cm}}										
-\hline \hline										
-Category        	&	       Sub-Category    	&	       Description     	&	       ABC Age (Years)     	&	       CARE Age (Years)     	&	       Measure\\ \hline
+\begin{tabular}{L{3.5cm} C{3.5cm} C{5cm} C{1.5cm} C{1.8cm} C{6cm}}										
+\toprule
+\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age}  	&  \textbf{CARE Age}  & 	\textbf{Measure}	\\ \midrule
 Cognitive Assessments   	&	       Intelligence Tests      	&	       WIS     	&	21	&	-	&	       WIS     \\
 \midrule										
 Non-Cognitive Assessment        	&	       Interpersonal Skills    	&	       Gets along with people  	&	       21, 30  	&	-	&	       Subject Interview   \\
@@ -226,7 +232,7 @@ Non-Cognitive Assessment        	&	       Interpersonal Skills    	&	       Gets
         	&	               	&	       depression, anxiety, fear, etc. 	&	       21, 30  	&	21, 30	&	       KRT, Achenbach Parent,  CAS, Brief Symptom Inventory, ETS\\
 \\										
         	&	       Social Activities       	&	       Athletic activities     	&	21	&	-	&	       Achenbach,  \\
-        	&	               	&	       Participant of organizations, e.g. religious    	&	       21, 30  	&	21, 30	&	       Achenbach, Subject Interview        \\
+        	&	               	&	       Participant of organizations, e.g. religions    	&	       21, 30  	&	21, 30	&	       Achenbach, Subject Interview        \\
 \midrule										
 Family Environment      	&	       Family Members  	&	       Number of adults in house       	&	21	&	-	&	       Parent Interview$^{ABC}$ , Subject Interview    \\
         	&	               	&	       Relationship with family members, including father, mother, siblings, etc.      	&	       21, 30  	&	30	&	      Parent Interview, Achenbach$^{ABC}$, Subject Interview, Adult Self Report \\
@@ -248,12 +254,12 @@ Family Environment      	&	       Family Members  	&	       Number of adults in 
         	&	               	&	       College type, certificate earned        	&	       21, 30  	&	       21, 30  	&	       Subject Interview, Adult Self Report    \\
 	&	Achievement Test	&	       WJCA    	&	       21, 30  	&	-	&	       WJCA    \\
 	&		&							
-        \\ \hline \hline							
+        \\ \bottomrule							
 \end{tabular}										
 \begin{tablenotes}									
 \scriptsize										
 \item Sources: Authors' description. \\				
-\item Note: This table describes the major categories of variables that were measured for ABC and CARE subjects after age 18. This is not an exhaustive list of variables, nor does it include variables from auxiliary data.  Instruments or questionnaires available for only one of the studies are indicated with the superscript $^{ABC}$ or $^{CARE}$. \textbf{Abbreviations are as follows.} WIS: Wechsler Adult Intelligence Scale.  WJCA: Woodcock-Johnson Test of Cognitive Abilities. PEI: Parents as Educator Interview.		\end{tablenotes}									
+\item Note: This table describes the major categories of variables that were measured for ABC and CARE subjects at ages 21 and 30. ABC and CARE age are measured in years. This is not an exhaustive list of variables, nor does it include variables from auxiliary data. Instruments or questionnaires available for only one of the studies are indicated with the superscript $^{ABC}$ or $^{CARE}$. \textbf{Abbreviations are as follows.} KRT: Kohn and Rosman Test Behavior Inventory. CAS: Child Assessment Schedule. ETS: Emotional/Activity/Sociability/Impulsivity Temperament Survey. WIS: Wechsler Adult Intelligence Scale. WJCA: Woodcock-Johnson Test of Cognitive Abilities. PEI: Parents as Educator Interview.		\end{tablenotes}									
 \end{threeparttable}								
 \end{sidewaystable}																			
 
@@ -264,8 +270,9 @@ Family Environment      	&	       Family Members  	&	       Number of adults in 
 \caption{Adulthood Data (Part II)} \label{tab:adultvars_2}
 \centering
 \scriptsize
-\begin{tabular}{L{3.5cm} C{3.5cm} C{5cm} C{1.5cm} C{1.5cm} C{6cm}}
-\hline \hline
+\begin{tabular}{L{3.5cm} C{3.5cm} C{5cm} C{1.5cm} C{1.8cm} C{6cm}}
+\toprule
+\textbf{Category}	&	\textbf{Sub-Category}	&	\textbf{Description}	&	\textbf{ABC Age}  	&  \textbf{CARE Age}  & 	\textbf{Measure}	\\ \midrule
 Physical Health	&	Health Insurance	&	Covered by health insurance	&	21, 30	&	21, 30	&	Subject Interview	\\
 \\											
 	&	Health Issues	&	Health conditions, diseases, regular checkups and tests, mental health	&	21, 30	&	21	&	Brief Symptom Inventory, Subject Interview, Adult Self Report	\\
@@ -289,14 +296,13 @@ Economic Status	&	Living Circumstances	&	Number of rooms	&	21, 30	&	21, 30	&	Sub
 \\											
 	&	Income	&	Income from job	&	21, 30	&	21, 30	&	Subject Interview, Adult Self Report	\\
 	&		&	Income from welfare programs	&	21, 30	&	30	&	Subject Interview, Adult Self Report	\\
-	&		&	Income from investment	&	21, 30	&	-	&	Subject Interview, Adult Self Report	\\
-\midrule											
- \hline \hline
+	&		&	Income from investment	&	21, 30	&	-	&	Subject Interview, Adult Self Report	\\										
+ \bottomrule
 \end{tabular}										
 \begin{tablenotes}									
 \scriptsize											
 \item Sources: Authors' description. \\				
-\item Note: This table describes the major categories of variables that were measured for ABC and CARE subjects after age 18. This is not an exhaustive list of variables, nor does it include variables from auxiliary data. Instruments or questionnaires available for only one of the studies are indicated with the superscript $^{ABC}$ or $^{CARE}$.			
+\item Note: This table describes the major categories of variables that were measured for ABC and CARE subjects at ages 21 and 30. ABC and CARE age are measured in years. This is not an exhaustive list of variables, nor does it include variables from auxiliary data. Instruments or questionnaires available for only one of the studies are indicated with the superscript $^{ABC}$ or $^{CARE}$.			
 \end{tablenotes}									
 \end{threeparttable}								
 \end{sidewaystable}											
