appendix ready for anna to read

--- a/output/abc_noncomp_e1.tex
+++ b/output/abc_noncomp_e1.tex
@@ -3,16 +3,16 @@
 \caption{Assessing Non-compliance in ABC, Exercise 1}
 \label{table:nc1}
 \centering 
-\begin{tabular}{ccccc} \hline \hline
+\begin{tabular}{ccccc} \toprule
  & (1) & (2) & (3) & (4) \\
- & IQ, Age 3 & IQ, Age 3  & IQ, Age 5 & IQ, Age 5 \\ \hline
+ & IQ, Age 3 & IQ, Age 3  & IQ, Age 5 & IQ, Age 5 \\ \midrule
  &  &  & & \\\
 Treatment - Control Mean Difference & 14.970 &  & 6.398 &  \\
  & (2.794) &  & (2.494) &  \\
 Bloom &  & 16.245 &  & 6.943 \\
- &  & (2.877) &  & (2.643) \\ \hline
+ &  & (2.877) &  & (2.643) \\ \midrule
 Observations & 100 & 100 & 100 & 100  \\
- $R^2$ & 0.227 & 0.289 & 0.063 & 0.088 \\ \hline \hline
+ $R^2$ & 0.227 & 0.289 & 0.063 & 0.088 \\ \bottomrule
  \end{tabular}
 \begin{tablenotes}
 \footnotesize
