--- a/output/abc_noncomp_e2.tex
+++ b/output/abc_noncomp_e2.tex
@@ -3,20 +3,20 @@
 \caption{Assessing Non-compliance in ABC, Exercise 2}
 \label{table:nc2}
 \centering 
-\begin{tabular}{ccccc} \hline \hline
+\begin{tabular}{ccccc} \toprule
  & (1) & (2) & (3) & (4) \\
- & IQ, Age 3 & IQ, Age 3  & IQ, Age 5 & IQ, Age 5 \\ \hline
+ & IQ, Age 3 & IQ, Age 3  & IQ, Age 5 & IQ, Age 5 \\ \midrule
  &  &  & & \\\
 Treatment - Control Mean Difference & 12.908 &  & 4.284 &  \\
  & (2.901) &  & (2.647) &  \\
 Bloom &  & 15.111 &  & 5.016 \\
- &  & (3.061) &  & (2.960) \\ \\ \hline
+ &  & (3.061) &  & (2.960) \\ \\ \midrule
 Observations & 104 & 104 & 104 & 104 \\
- $R^2$ & 0.163 & 0.306 & 0.025 & 0.093 \\ \hline \hline
+ $R^2$ & 0.163 & 0.306 & 0.025 & 0.093 \\ \bottomrule
  \end{tabular}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table displays the mean difference between the treatment and control groups and the same difference adjusted for non-compliance (Bloom estimator) in two measures of IQ, the Stanford-Binet IQ Score at age 3 and the Wechsler Preschool and Primary Scale of Intelligence at age 5. We impute the minimum test scores to two individuals initially assigned to treatment for whom we do not have data. The minimum in the two tests was 71. Homoskedastic, asymptotic standard errors are in parentheses.
+\item Note: This table displays the mean difference between the treatment and control groups and the same difference adjusted for non-compliance (Bloom estimator) in two measures of IQ, the Stanford-Binet IQ Score at age 3 and the Wechsler Preschool and Primary Scale of Intelligence at age 5. We impute the minimum test scores of four individuals initially assigned to treatment for whom we do not have data. The minimum in the two tests was 71. Homoskedastic, asymptotic standard errors are in parentheses.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
