--- a/output/ihdp_bayley.tex
+++ b/output/ihdp_bayley.tex
@@ -3,15 +3,15 @@
 \caption{Treatment - Control Mean Difference, IHDP}
 \label{table:ihdp}
 \centering 
-\begin{tabular}{lcc} \hline \hline
+\begin{tabular}{lcc} \toprule
  & (1) & (2) \\
- & Bayley MDI, 12 Months & Bayley MDI, 24 Months \\ \hline
+ & Bayley MDI, 12 Months & Bayley MDI, 24 Months \\ \midrule
  &  &  \\\
 Mean Treatment - Mean Control & 0.142 & 9.958 \\
  & (0.968) & (1.498) \\
- &  &  \\ \hline
+ &  &  \\ \midrule
 Observations & 893 & 910 \\
-$R^2$ & 0.000 & 0.067 \\ \hline \hline  
+$R^2$ & 0.000 & 0.067 \\ \midrule
 \end{tabular}
 \begin{tablenotes}
 \footnotesize
