--- a/output/abc_cohorts.tex
+++ b/output/abc_cohorts.tex
@@ -3,9 +3,9 @@
 \caption{Treatment - Control Mean Difference by Cohort, ABC}
 \label{table:cohorts}
 \centering 
-\begin{tabular}{lcc} \hline \hline
+\begin{tabular}{lcc} \toprule
  & (1) & (2) \\
- & Bayley MDI, 12 Months & Bayley MDI, 24 Months \\ \hline
+ & Bayley MDI, 12 Months & Bayley MDI, 24 Months \\ \midrule
  &  &  \\\
 Cohort 1 & 4.841 & -2.901 \\
  & (6.013) & (5.926) \\
@@ -14,9 +14,9 @@ Cohort 2 & 0.071 & 1.882 \\
 Cohort 3 & 9.143 & 10.038 \\
  & (5.801) & (5.926) \\
 Cohort 4 & 7.829 & 13.713 \\
- & (5.801) & (5.830) \\ \\ \hline
+ & (5.801) & (5.830) \\ \\ \midrule
 Observations & 112 & 110 \\
-$R^2$ & 0.055 & 0.110 \\ \hline \hline 
+$R^2$ & 0.055 & 0.110 \\ \bottomrule
  \end{tabular}
 \begin{tablenotes}
 \footnotesize
