--- a/output/abccare_programcomparison.tex
+++ b/output/abccare_programcomparison.tex
@@ -2,7 +2,7 @@
 \begin{center}
 \begin{threeparttable}
 \caption{ABC and CARE, Programs Comparison} \label{tab:programcomparison}
-\scriptsize
+\footnotesize
 \scalebox{.9}{\begin{tabular}{L{4cm} L{7cm} L{5cm}} \toprule
 & \multicolumn{1}{c}{ABC}& \multicolumn{1}{c}{CARE}\\ \midrule
 \textbf{Program Overview} &&\\
