--- a/output/baseline_balance_abccare.tex
+++ b/output/baseline_balance_abccare.tex
@@ -5,32 +5,32 @@
   \begin{threeparttable}
   \begin{tabular}{cccccccc} \toprule
 
-     &  & \scriptsize{ABC} & \scriptsize{CARE} & \scriptsize{ABC} & \scriptsize{CARE} & \mc{2}{c}{\scriptsize{$p$-value}} \\  
+     &  & \footnotesize{ABC} & \footnotesize{CARE} & \footnotesize{ABC} & \footnotesize{CARE} & \mc{2}{c}{\footnotesize{$p$-value}} \\  
 
-    \scriptsize{Variable} & \scriptsize{Age} & \scriptsize{Obs} & \scriptsize{Obs} & \scriptsize{Mean} & \scriptsize{Mean} & \scriptsize{Single $H_0$} & \scriptsize{Multiple $H_0$} \\ 
+    \footnotesize{Variable} & \footnotesize{Age} & \footnotesize{Obs} & \footnotesize{Obs} & \footnotesize{Mean} & \footnotesize{Mean} & \footnotesize{Single $H_0$} & \footnotesize{Multiple $H_0$} \\ 
     \hline  
 
-    \mc{1}{l}{\scriptsize{Male}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{116}} & \mc{1}{c}{\scriptsize{67}} & \mc{1}{c}{\scriptsize{0.464}} & \mc{1}{c}{\scriptsize{0.596}} & \mc{1}{c}{\scriptsize{\textbf{(0.060)}}} & \mc{1}{c}{\scriptsize{(0.110)}} \\  
+    \mc{1}{l}{\footnotesize{Male}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{116}} & \mc{1}{c}{\footnotesize{67}} & \mc{1}{c}{\footnotesize{0.464}} & \mc{1}{c}{\footnotesize{0.596}} & \mc{1}{c}{\footnotesize{\textbf{(0.060)}}} & \mc{1}{c}{\footnotesize{(0.110)}} \\  
 
-    \mc{1}{l}{\scriptsize{Birth Weight}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{114}} & \mc{1}{c}{\scriptsize{64}} & \mc{1}{c}{\scriptsize{7.008}} & \mc{1}{c}{\scriptsize{7.139}} & \mc{1}{c}{\scriptsize{(0.625)}} & \mc{1}{c}{\scriptsize{(0.765)}} \\  
+    \mc{1}{l}{\footnotesize{Birth Weight}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{114}} & \mc{1}{c}{\footnotesize{64}} & \mc{1}{c}{\footnotesize{7.008}} & \mc{1}{c}{\footnotesize{7.139}} & \mc{1}{c}{\footnotesize{(0.625)}} & \mc{1}{c}{\footnotesize{(0.765)}} \\  
 
-    \mc{1}{l}{\scriptsize{No. Siblings in Household}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{116}} & \mc{1}{c}{\scriptsize{67}} & \mc{1}{c}{\scriptsize{0.632}} & \mc{1}{c}{\scriptsize{0.684}} & \mc{1}{c}{\scriptsize{(0.810)}} & \mc{1}{c}{\scriptsize{(0.890)}} \\  
+    \mc{1}{l}{\footnotesize{No. Siblings in Household}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{116}} & \mc{1}{c}{\footnotesize{67}} & \mc{1}{c}{\footnotesize{0.632}} & \mc{1}{c}{\footnotesize{0.684}} & \mc{1}{c}{\footnotesize{(0.810)}} & \mc{1}{c}{\footnotesize{(0.890)}} \\  
 
-    \mc{1}{l}{\scriptsize{Birth Year}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{116}} & \mc{1}{c}{\scriptsize{67}} & \mc{1}{c}{\scriptsize{1974}} & \mc{1}{c}{\scriptsize{1979}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.000)}}} \\ 
+    \mc{1}{l}{\footnotesize{Birth Year}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{116}} & \mc{1}{c}{\footnotesize{67}} & \mc{1}{c}{\footnotesize{1974}} & \mc{1}{c}{\footnotesize{1979}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.000)}}} \\ 
     \midrule
 
-    \mc{1}{l}{\scriptsize{Mother's Education}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{116}} & \mc{1}{c}{\scriptsize{67}} & \mc{1}{c}{\scriptsize{10.188}} & \mc{1}{c}{\scriptsize{10.868}} & \mc{1}{c}{\scriptsize{\textbf{(0.010)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.025)}}} \\  
+    \mc{1}{l}{\footnotesize{Mother's Education}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{116}} & \mc{1}{c}{\footnotesize{67}} & \mc{1}{c}{\footnotesize{10.188}} & \mc{1}{c}{\footnotesize{10.868}} & \mc{1}{c}{\footnotesize{\textbf{(0.010)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.025)}}} \\  
 
-    \mc{1}{l}{\scriptsize{Mother's Age}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{116}} & \mc{1}{c}{\scriptsize{67}} & \mc{1}{c}{\scriptsize{19.828}} & \mc{1}{c}{\scriptsize{21.141}} & \mc{1}{c}{\scriptsize{\textbf{(0.060)}}} & \mc{1}{c}{\scriptsize{\textbf{(0.100)}}} \\  
+    \mc{1}{l}{\footnotesize{Mother's Age}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{116}} & \mc{1}{c}{\footnotesize{67}} & \mc{1}{c}{\footnotesize{19.828}} & \mc{1}{c}{\footnotesize{21.141}} & \mc{1}{c}{\footnotesize{\textbf{(0.060)}}} & \mc{1}{c}{\footnotesize{\textbf{(0.100)}}} \\  
 
-    \mc{1}{l}{\scriptsize{Mother's IQ}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{116}} & \mc{1}{c}{\scriptsize{67}} & \mc{1}{c}{\scriptsize{84.407}} & \mc{1}{c}{\scriptsize{87.164}} & \mc{1}{c}{\scriptsize{\textbf{(0.070)}}} & \mc{1}{c}{\scriptsize{(0.130)}} \\  
+    \mc{1}{l}{\footnotesize{Mother's IQ}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{116}} & \mc{1}{c}{\footnotesize{67}} & \mc{1}{c}{\footnotesize{84.407}} & \mc{1}{c}{\footnotesize{87.164}} & \mc{1}{c}{\footnotesize{\textbf{(0.070)}}} & \mc{1}{c}{\footnotesize{(0.130)}} \\  
 
-    \mc{1}{l}{\scriptsize{Father at Home}} & \mc{1}{c}{\scriptsize{0}} & \mc{1}{c}{\scriptsize{116}} & \mc{1}{c}{\scriptsize{67}} & \mc{1}{c}{\scriptsize{0.283}} & \mc{1}{c}{\scriptsize{0.209}} & \mc{1}{c}{\scriptsize{(0.270)}} & \mc{1}{c}{\scriptsize{(0.380)}} \\  
+    \mc{1}{l}{\footnotesize{Father at Home}} & \mc{1}{c}{\footnotesize{0}} & \mc{1}{c}{\footnotesize{116}} & \mc{1}{c}{\footnotesize{67}} & \mc{1}{c}{\footnotesize{0.283}} & \mc{1}{c}{\footnotesize{0.209}} & \mc{1}{c}{\footnotesize{(0.270)}} & \mc{1}{c}{\footnotesize{(0.380)}} \\  
 
   \bottomrule
   \end{tabular}
     \begin{tablenotes}
-    \scriptsize
+    \footnotesize
     \item 
     Note: This table compares baseline, observed characteristics between ABC and CARE. 
     For each characteristic, we present the $p$-value from a single hypothesis test.
